@@ -16,19 +16,18 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKe
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
 @RequiredArgsConstructor
-public class StaffCallbackHandler implements CallbackHandler{
+public class ChooseServiceCallBackHandler implements CallBackHandler {
 
     private final BarbershopService barbershopService;
     private final ParsingDtoService parsingDtoService;
 
     @Override
     public boolean supports(String data) {
-        return data.startsWith("staff_");
+        return data.startsWith("choose_service_");
     }
 
     @Override
@@ -36,41 +35,68 @@ public class StaffCallbackHandler implements CallbackHandler{
         String data = callbackQuery.getData();
         Long chatId = callbackQuery.getMessage().getChatId();
 
+        log.info("[ChooseService] Получен callback data='{}', chatId={}", data, chatId);
+
         try {
-            String[] parts = data.split("_", 3);
-            if (parts.length < 3) {
+            String[] parts = data.split("_", 4);
+            if (parts.length < 4) {
+                log.warn("[ChooseService] Некорректный формат callback data, parts.length={}", parts.length);
                 sendMessage(bot, chatId, "⚠️ Ошибка в данных callback.");
                 return;
             }
 
-            String staffIdStr = parts[1];
-            String slug = parts[2];
+            Long staffId;
+            try {
+                staffId = Long.parseLong(parts[2]);
+            } catch (NumberFormatException e) {
+                log.error("[ChooseService] Ошибка парсинга staffId из '{}'", parts[2], e);
+                sendMessage(bot, chatId, "⚠️ Некорректный ID мастера.");
+                return;
+            }
+
+            String slug = parts[3];
+            log.info("[ChooseService] staffId={}, slug={}", staffId, slug);
 
             barbershopService.getBySlug(slug).ifPresentOrElse(barbershop -> {
                 String companyId = barbershop.getYclientsCompanyId();
+                log.info("[ChooseService] Получен companyId={}", companyId);
+
                 try {
                     List<ServiceDto> services = parsingDtoService.getServicesParsed(companyId);
-                    long staffId = Long.parseLong(staffIdStr);
+                    log.info("[ChooseService] Всего услуг загружено: {}", services.size());
 
+                    // Фильтруем услуги по мастеру с использованием equals
                     List<ServiceDto> staffServices = services.stream()
                             .filter(s -> {
                                 List<StaffDto> staffList = s.getStaff();
-                                return staffList != null && staffList.stream().anyMatch(staff -> staff.getId() == staffId);
+                                boolean matched = staffList != null && staffList.stream()
+                                        .anyMatch(staff -> staff.getId() != null && staff.getId().equals(staffId));
+                                if (!matched) {
+                                    log.debug("[ChooseService] Услуга '{}' не принадлежит мастеру с ID {}", s.getTitle(), staffId);
+                                }
+                                return matched;
                             })
-                            .filter(s -> s.getTitle() != null && !s.getTitle().isBlank())
-                            .collect(Collectors.toList());
+                            .toList();
+
+                    log.info("[ChooseService] Услуг после фильтрации по мастеру: {}", staffServices.size());
 
                     if (staffServices.isEmpty()) {
                         sendMessage(bot, chatId, "🔍 У этого мастера пока нет доступных услуг.");
                         return;
                     }
-
                     List<List<InlineKeyboardButton>> rows = new ArrayList<>();
                     for (ServiceDto service : staffServices) {
-                        InlineKeyboardButton button = new InlineKeyboardButton();
-                        button.setText(service.getTitle() +
-                                (service.getPriceMin() != null ? " (от " + service.getPriceMin().intValue() + "₽)" : ""));
-                        button.setCallbackData("service_" + service.getId() + "_" + staffIdStr + "_" + slug);
+                        String buttonText = service.getTitle() +
+                                (service.getPriceMin() != null ? " (от " + service.getPriceMin().intValue() + "₽)" : "");
+
+                        // Добавляем нулевой-width space в конец, чтобы Telegram не сжимал текст
+                        buttonText += "\u200B";
+
+                        InlineKeyboardButton button = InlineKeyboardButton.builder()
+                                .text(buttonText)
+                                .callbackData("service_" + service.getId() + "_" + staffId + "_" + slug)
+                                .build();
+
                         rows.add(Collections.singletonList(button));
                     }
 
@@ -79,19 +105,24 @@ public class StaffCallbackHandler implements CallbackHandler{
 
                     SendMessage message = SendMessage.builder()
                             .chatId(chatId.toString())
-                            .text("💇 Услуги мастера:")
+                            .text("\uD83D\uDC87 Выберите услугу:") // короткий заголовок
                             .replyMarkup(keyboard)
                             .build();
 
                     bot.execute(message);
+
                 } catch (Exception e) {
-                    log.error("Ошибка при получении услуг мастера", e);
+                    log.error("[ChooseService] Ошибка при получении услуг мастера", e);
                     sendMessage(bot, chatId, "❌ Не удалось получить услуги мастера. Попробуйте позже.");
                 }
-            }, () -> sendMessage(bot, chatId, "❌ Барбершоп не найден."));
+
+            }, () -> {
+                log.warn("[ChooseService] Барбершоп с слагом '{}' не найден", slug);
+                sendMessage(bot, chatId, "❌ Барбершоп не найден.");
+            });
 
         } catch (Exception e) {
-            log.error("Ошибка при обработке callback staff_", e);
+            log.error("[ChooseService] Ошибка при обработке callback choose_service_", e);
             sendMessage(bot, chatId, "❌ Произошла ошибка. Попробуйте позже.");
         }
     }
@@ -100,8 +131,7 @@ public class StaffCallbackHandler implements CallbackHandler{
         try {
             bot.execute(SendMessage.builder().chatId(chatId.toString()).text(text).build());
         } catch (Exception e) {
-            log.error("Ошибка при отправке сообщения", e);
+            log.error("[ChooseService] Ошибка при отправке сообщения", e);
         }
     }
-
 }
